Fix container alignment issues

--- a/styles-conference/assets/stylesheets/main.css
+++ b/styles-conference/assets/stylesheets/main.css
@@ -93,3 +93,13 @@ h1, h3, h4, h5, p {
 .btn-alt {
   border: 1px solid #dfe2e5;
 }
+
+/*
+  ========================================
+  Home
+  ========================================
+*/
+
+.hero {
+  padding: 22px 80px 66px 80px;
+}
